src/styles/global.css
@import "reset.css";
@import "fonts.css";

:root {
  --width: 768px;
  --text-opacity: .9;
  --color-text: #333;
  --color-heading: #111;
  --color-light: #ccc;
  --color-gray: #555;
  --color-nav-stroke: rgb(242 45 94);

  --color-primary-rgb: 53 88 255;
  --color-primary: rgb(var(--color-primary-rgb));
  --color-bg: rgb(var(--color-primary-rgb) / 2%);
  --color-button: rgb(var(--color-primary-rgb) / 10%);
  --color-button-hover: rgb(var(--color-primary-rgb) / 20%);

  --font-serif: "Cooper BT", Iowan Old Style, Apple Garamond, Baskerville, Times New Roman, Droid Serif, Times, Source Serif Pro, serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
  --font-sans: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
}

@media (prefers-color-scheme: dark) {
  :root {
    --color-text: #ddd;
    --color-heading: #eee;
    --color-light: #777;
    --color-gray: #bbb;
    --color-bg: #111;
  }
}

body {
  font-family: var(--font-sans);
  font-size: 112.5%; /* 18px when the browser is set to 16px */
  display: flex;
  flex-direction: column;
  align-items: stretch;
  color: var(--color-text);
  background: var(--color-bg);
}

main {
  flex-grow: 1;
}

header, main, footer {
  width: 100%;
  margin: 0 auto;
}

header {
  background: rgb(var(--color-primary-rgb) / 4%);
  border-bottom: 1px solid rgb(var(--color-primary-rgb) / 2%);
  margin-bottom: 12px;
}

main, footer {
  padding: 0 16px;
  max-width: var(--width);
}

figcaption p {
  margin: 0;
}

p, ul, ol, pre {
  margin-bottom: 12px;
}

h1, h2, h3, h4, h5, h6 {
  margin-bottom: 8px;
  color: var(--color-heading);
  font-family: var(--font-serif);
  font-weight: 800;
}

h1 {
  margin-bottom: 8px;
  font-size: 2em;
}

h2 {
  font-size: 1.5em;
}

h3 {
  font-size: 1.2em;
}

blockquote {
  padding: 0 0 0 16px;
  border-left: 4px solid var(--color-primary);
  color: var(--color-gray);
  font-style: italic;
  font-size: 1em;
}

a {
  color: var(--color-primary);
  text-decoration: underline;
}

a:hover {
  text-decoration: none;
}

